<resources>
    <string name="app_name">MyDemo</string>
    <string name="text">你好啊</string>
    <string name="entity"> </string>
    <string name="phone">手机号</string>
    <string name="input_phone">请输入手机号</string>
    <string name="auth_code">验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="verify_login">验证手机</string>
</resources>
