<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".mvpsample.view.LoginActivity">


    <ImageView
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="43dp"
        android:contentDescription="@string/entity"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp">

        <TextView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingEnd="0dp"
            android:paddingStart="2dp"
            android:text="@string/phone"
            android:textColor="@color/text_383"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_login_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:textColor="@color/text_383"
            android:maxLines="1"
            android:textColorHint="@color/text_999"
            android:textCursorDrawable="@drawable/shape_edit" />
    </LinearLayout>

    <View
        style="@style/view_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">

        <TextView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingEnd="0dp"
            android:paddingStart="2dp"
            android:text="@string/auth_code"
            android:textColor="@color/text_383"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_login_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/text_383"
            android:background="@null"
            android:hint="@string/input_code"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:textColorHint="@color/text_999"
            android:textCursorDrawable="@drawable/shape_edit"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_login_code"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="86dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_selector_code"
            android:gravity="center"
            android:text="@string/get_code"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        style="@style/view_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/btn_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/btn_selector_code"
        android:text="@string/verify_login"
        android:textColor="@color/btn_code_text"
        android:textSize="15sp" />


</LinearLayout>
